Front ordonné : home, card-annonce, footer, banner, et header

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,9 @@
 
         {% block body %}{% endblock %}
 
-        {% block footer %}{% endblock %}
+        {% block footer %}
+            {% include 'partials/_footer.html.twig' %}
+        {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
