--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,9 +4,6 @@
 
 {% block body %}
     {% block banner %}
-        {% include 'components/_banner.html.twig' %}
-    {% endblock %}
-    {% block card %}
-        {% include 'components/_card_annonce.html.twig' %}
+        {% include 'partials/_banner.html.twig' %}
     {% endblock %}
 {% endblock %}
