--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,8 @@
             {% include 'partials/_header.html.twig' %}
         {% endblock %}
 
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
 
         {% block footer %}
             {% include 'partials/_footer.html.twig' %}
