--- a/templates/components/_card_annonce.html.twig
+++ b/templates/components/_card_annonce.html.twig
@@ -12,10 +12,10 @@
             <p class="card-text">{{ product.description }}</p>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a class="btn btn-sm btn-warning" href="{# {{ path('app_show_product') }} #}" role="button">Plus de détails</a>
+                    <a class="btn btn-sm btn-warning" href="{{ path('app_show_product', {id: product.id}) }}" role="button">Plus de détails</a>
                     <button type="button" class="btn btn-sm btn-primary">Contacter</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">{{ product.createdAt|date("d/m/Y") }}</small>
             </div>
         </div>
     </div>
