--- a/templates/pages/annonces/show_product.html.twig
+++ b/templates/pages/annonces/show_product.html.twig
@@ -1,73 +1,81 @@
-<div class="container mt-5 mb-5">
-    <div class="card">
-        <div class="row g-0">
-            <div class="col-md-6 border-end">
-                <div class="d-flex flex-column justify-content-center">
-                    {#                        <div class="main_image">#}
-                    {#                            <img src="/images/front/dan-gold-N7RiDzfF2iw-unsplash.jpg" id="main_product_image" width="350">#}
-                    {#                        </div>#}
-                    <div class="thumbnail_images">
-                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="/images/front/dan-gold-N7RiDzfF2iw-unsplash.jpg" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="/images/front/flash-dantz-TwoTVGggRJ4-unsplash.jpg" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="/images/front/jean-woloszczyk-hRKPBS23aEE-unsplash.jpg" class="d-block w-100" alt="...">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+{% extends 'base.html.twig' %}
+
+{% block title %}Détails de l'annonce{% endblock %}
+
+{% block body %}
+
+    <div class="container mt-5 mb-5">
+        <div class="card">
+            <div class="row g-0">
+                <div class="col-md-6 border-end">
+                    <div class="d-flex flex-column justify-content-center">
+                                                <div class="main_image">
+                                                    <img src="/images/front/dan-gold-N7RiDzfF2iw-unsplash.jpg" id="main_product_image" width="350">
+                                                </div>
+                        <div class="thumbnail_images">
+{#                            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">#}
+{#                                <div class="carousel-inner">#}
+{#                                    <div class="carousel-item active">#}
+{#                                        <img src="/images/front/dan-gold-N7RiDzfF2iw-unsplash.jpg" class="d-block w-100" alt="...">#}
+{#                                    </div>#}
+{#                                    <div class="carousel-item">#}
+{#                                        <img src="/images/front/flash-dantz-TwoTVGggRJ4-unsplash.jpg" class="d-block w-100" alt="...">#}
+{#                                    </div>#}
+{#                                    <div class="carousel-item">#}
+{#                                        <img src="/images/front/jean-woloszczyk-hRKPBS23aEE-unsplash.jpg" class="d-block w-100" alt="...">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">#}
+{#                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>#}
+{#                                    <span class="visually-hidden">Previous</span>#}
+{#                                </button>#}
+{#                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">#}
+{#                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>#}
+{#                                    <span class="visually-hidden">Next</span>#}
+{#                                </button>#}
+{#                            </div>#}
+                                                        <ul id="thumbnail">
+                                                            <li><img onclick="changeImage(this)" src="/images/front/dan-gold-N7RiDzfF2iw-unsplash.jpg" width="70"></li>
+                                                            <li><img onclick="changeImage(this)" src="/images/front/jean-woloszczyk-hRKPBS23aEE-unsplash.jpg" width="70"></li>
+                                                            <li><img onclick="changeImage(this)" src="/images/front/dan-gold-N7RiDzfF2iw-unsplash.jpg" width="70"></li>
+                                                            <li><img onclick="changeImage(this)" src="/images/front/jean-woloszczyk-hRKPBS23aEE-unsplash.jpg" width="70"></li>
+                                                        </ul>
                         </div>
-                        {#                            <ul id="thumbnail">#}
-                        {#                                <li><img onclick="changeImage(this)" src="https://i.imgur.com/TAzli1U.jpg" width="70"></li>#}
-                        {#                                <li><img onclick="changeImage(this)" src="https://i.imgur.com/w6kEctd.jpg" width="70"></li>#}
-                        {#                                <li><img onclick="changeImage(this)" src="https://i.imgur.com/L7hFD8X.jpg" width="70"></li>#}
-                        {#                                <li><img onclick="changeImage(this)" src="https://i.imgur.com/6ZufmNS.jpg" width="70"></li>#}
-                        {#                            </ul>#}
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="p-3 right-side">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <h3>Titre</h3>
-                        <span class="heart"><i class='bx bx-heart'></i></span>
-                    </div>
-                    <div class="mt-2 pr-3 content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                    <h3>$430.99</h3>
-                    <div class="ratings d-flex flex-row align-items-center">
-                        <div class="d-flex flex-row">
-                            <i class='bx bxs-star' ></i>
-                            <i class='bx bxs-star' ></i>
-                            <i class='bx bxs-star' ></i>
-                            <i class='bx bxs-star' ></i>
-                            <i class='bx bx-star' ></i>
+                <div class="col-md-6">
+                    <div class="p-3 right-side">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h3>{{ product.title }}</h3>
+                            <span class="heart"><i class='bx bx-heart'></i></span>
                         </div>
-                        <span>441 reviews</span>
-                    </div>
-                    <div class="mt-5">
-                        <span class="fw-bold">Date de création</span>
-                        <div class="date">
-                            //Insérer la date de création
+                        <div class="mt-2 pr-3 content">
+                            <p>{{ product.description }}</p>
                         </div>
-                    </div>
-                    <div class="buttons d-flex flex-row mt-5 gap-3">
-                        <button class="btn btn-dark">Contacter le vendeur</button>
+                        <h3>{{ product.price }} €</h3>
+                        <div class="ratings d-flex flex-row align-items-center">
+                            <div class="d-flex flex-row">
+                                <i class='bx bxs-star' ></i>
+                                <i class='bx bxs-star' ></i>
+                                <i class='bx bxs-star' ></i>
+                                <i class='bx bxs-star' ></i>
+                                <i class='bx bx-star' ></i>
+                            </div>
+                            <span>441 reviews</span>
+                        </div>
+                        <div class="mt-5">
+                            <span class="fw-bold">Date de création</span>
+                            <div class="date">
+                                //Insérer la date de création
+                            </div>
+                        </div>
+                        <div class="buttons d-flex flex-row mt-5 gap-3">
+                            <button class="btn btn-dark">Contacter</button>
+                            <a class="btn btn-success" href="{{ path('app_annonce_edit', {id: product.id}) }}" role="button">Modifier</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+{% endblock %}
